--- a/style.css
+++ b/style.css
@@ -11,12 +11,28 @@ body{
     padding: 0;
     font-family: 'Roboto', sans-serif;
     background-color: #101214;
-    color: #7A7C80;
+    /* color: #7A7C80; */
+    color: #c7ccd5;
     li { padding: 10px 0px 0px; }
     p + ul {
         margin-top: -10px;
     }
     padding-bottom: 200px;
+    background: linear-gradient(270deg, #1a1a1a, #333333, #494848, #000000);
+    background-size: 800% 800%;
+    animation: gradientShift 20s ease infinite;
+}
+
+@keyframes gradientShift {
+    0% {
+      background-position: 0% 50%;
+    }
+    50% {
+      background-position: 100% 50%;
+    }
+    100% {
+      background-position: 0% 50%;
+    }
 }
 
 h2,.white{
@@ -24,7 +40,8 @@ h2,.white{
 }
 
 a{
-    color: #7A7C80;
+    /* color: #7A7C80; */
+    color: #c7ccd5;
     text-decoration: none;
 }
 /* section 1 */
